--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -8,7 +8,9 @@
   </div>
   <div class="col-md-6">
     <h3><%= @listing.name %></h3>
-     <p><%= number_to_currency(listing.price) %></p>
+    <p><%= @listing.artist %></p>
+    <p><%= @listing.year %></p>
+    <p><%= number_to_currency(@listing.price) %></p>
     <p><%= @listing.description %></p>
   </div>
 </div>
