--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
 <%= render 'layouts/header' %>
 
 <div class="container">
-<%= yield %>
+	<p class="notice"><%= notice %></p>
+  	<p class="alert"><%= alert %></p>
+	<%= yield %>
 
-<%= render 'layouts/footer' %>
+	<%= render 'layouts/footer' %>
 
 </div>
 </body>
