--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -8,7 +8,10 @@
             <h3><%= listing.name %></h3>
             <p><%= number_to_currency(listing.price) %></p>
             <p><%= "Sold by #{listing.user.name}" %></p>
-            
+            <% if (user_signed_in?) && (current_user == listing.user) %>
+              <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+              <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+            <% end %>
           </div>
         </div>
       </div>
@@ -16,7 +19,8 @@
   </div>
 </div>    
 
-
 <br>
 
-<%= link_to "New Listing", new_listing_path, class: "btn btn-link" %>
+<% if user_signed_in? %>
+  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+<% end %>
