add banner to homepage

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,11 @@
+<div class="jumbotron">
+  <br>
+  <br>
+  <h1>Discover artwork from 
+      talented local artists in California.</h1>
+  <h2>Curated and authentic.</h2>
+</div>
+
 <div class="center">
   <div class="row">
     <% @listings.each do |listing| %>
