--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,7 +56,7 @@ body {
 }
 
 .jumbotron {
-  background-image: url('jumbotron.jpg');
+  background-image: url('https://dl.dropboxusercontent.com/s/ct4qodiz0di2m35/jumbotron.jpg?dl=0');
   h1, h2 {
     font-family: guardian-egyptt, georgia, serif;
     color: #FFFFFF;
