--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,11 @@
       <li><%= link_to "Contact", pages_contact_path %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+
+      <% if user_signed_in? %>
+        <li><%= link_to 'New Listing', new_listing_path, class: "btn btn-warning", data: { no_turbolink: true } %></li>
+      <% end %>
+
       <% if user_signed_in? %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Seller Account <b class="caret"></b></a>
