--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,14 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <li><%= link_to "About", pages_about_path %></li>
+      <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Artwork <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <% Category.all.each do |category| %>
+              <li><%= link_to category.name, listings_path(category: category.name) %></li>
+            <% end %>
+          </ul>
+      </li>
       <li><%= link_to "Events", pages_event_path %></li>
       <li><%= link_to "Sitemap", pages_sitemap_path %></li>
       <li><%= link_to "Contact", pages_contact_path %></li>
