--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,24 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="col-xs-10 col-xs-offset-1">
+	<h2><i>Welcome to Novarini Gallery</i></h2>
+	<h4>Novarini Gallery is an online marketplace for buying and selling paintings. If you're an artists, we encourage you to submit your artwork to us. We will review and contact you immediately with the confirmation should your artwork is chosen to join our next exhibition</h4>
+
+	<br>
+	<br>
+	<br>
+
+
+	<div class="col-xs-12 col-sm-4">
+	    <%= image_tag '99.jpg', :class => 'img-responsive' %>
+	  </div>
+
+	  <div class="col-xs-12 col-sm-7 col-sm-offset-1">   
+	  	<h2 class="text-center"><u>Founders</u></h2>
+	    <h3 class="text-center">Maya Novarini</h3>
+	    <br />
+	    <p>
+	      Maya Novarini is the founder of Novarini Gallery. She is an artist and a junior web developer at the same time. Currently she is studying her second Master in Software Engineering at University of Hertfordshire, UK. Her first Master was in Political Communication in Universiteit van Amsterdam. Regardless her exposure to any political subjects, she has been always interested in programming and software development since she was 19 years old. Her first website was an ecommerce site that she developed using CMS. Her interests in general are ranging from software, artificial intelligence, to art such as painting and music. She is also known to be pretty badass in the kitchen. Her favorite dishes are Spicy Fried Chicken and Black Pepper Pork. Maya was born and raised in Jakarta, Indonesia. Having lived in The Netherlands for 5 years until she moved and resides in San Francisco.
+	    </p>
+	  </div>
+	  <br class="clear" />
+
+</div>
