--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<div class="col-xs-10 col-xs-offset-1">
+
+	<%= image_tag 'contact.png', :class => 'img-responsive' %>
+	<h3>For inquiry, please send your email to maya@novarini.com</h3>
+
+	<address>
+	  <strong>Novarini Gallery</strong><br>
+	  SoMa Square Apartment #6116<br>
+	  San Francisco, CA 94107<br>
+	  <abbr title="Phone">P:</abbr> (123) 456-7890
+	</address>
+</div>
