--- a/app/views/pages/event.html.erb
+++ b/app/views/pages/event.html.erb
@@ -1,2 +1,55 @@
-<h1>Pages#event</h1>
-<p>Find me in app/views/pages/event.html.erb</p>
+<div class="col-xs-10 col-xs-offset-1">
+	<h2><i>Events</i></h2>
+	<h3>We always have events coming up. Our schedule is updated periodically. Please check our website for more information.</h3>
+	<br>
+	<br>
+
+	<h4>Grand Opening Our New Gallery</h4>
+	<h6>May 16th, 2015</h6>
+	<h6><strong>San Francisco</strong></h6>
+	<p>Lorem ipsum dolor sit amet, porro dignissim an eum. Errem regione eu has, quodsi labores ad est. Nullam conclusionemque ex vix, eam id legimus legendos. Pro habemus accusam adolescens te. Ad doctus feugiat pericula cum, ubique cetero salutatus per et, eum at vide aeque.
+
+	Pri case assum populo te, mei eu vero mucius viderer, an mea unum pericula. Augue movet alterum mei ad, ne erroribus sententiae omittantur mei, vim diam adolescens eu. In indoctum dissentiunt comprehensam qui, duo sale graeci oporteat ad, soleat molestie an mei. Sint paulo te mea, movet scriptorem id vix, case accusam lucilius ne per. Ad duo alii ornatus argumentum, alia tacimates constituto no mei.
+
+	Et elitr officiis voluptaria nec. Esse graeci latine his no, sea ullum saperet ea. Pro ne vero conceptam, esse solet tacimates at qui. Per no delenit disputationi. Magna minimum consequuntur est ad.
+
+	Accumsan offendit reprehendunt mei ea, per persecuti conclusionemque ex, at eos quot platonem reformidans. At invenire gubergren qui, quem officiis comprehensam ad est. Te per diceret complectitur, pri lorem delicata periculis cu, est quot dictas suavitate ex. Verear laboramus no ius, atqui vitae perfecto sit id. Mel nostrud hendrerit abhorreant ad, vis movet expetenda cu, zril aliquando ius ne.
+
+	Intellegat deseruisse adipiscing ne eos. Ex modo numquam expetendis nam. Ut liber voluptaria cum. Id vide ubique sea. Ex minim legimus nonumes pri.</p>
+
+	<br>
+	<br>
+	<br>
+
+	<h4>Grand Opening Our New Gallery</h4>
+	<h6>May 16th, 2015</h6>
+	<h6><strong>San Francisco</strong></h6>
+	<p>Lorem ipsum dolor sit amet, porro dignissim an eum. Errem regione eu has, quodsi labores ad est. Nullam conclusionemque ex vix, eam id legimus legendos. Pro habemus accusam adolescens te. Ad doctus feugiat pericula cum, ubique cetero salutatus per et, eum at vide aeque.
+
+	Pri case assum populo te, mei eu vero mucius viderer, an mea unum pericula. Augue movet alterum mei ad, ne erroribus sententiae omittantur mei, vim diam adolescens eu. In indoctum dissentiunt comprehensam qui, duo sale graeci oporteat ad, soleat molestie an mei. Sint paulo te mea, movet scriptorem id vix, case accusam lucilius ne per. Ad duo alii ornatus argumentum, alia tacimates constituto no mei.
+
+	Et elitr officiis voluptaria nec. Esse graeci latine his no, sea ullum saperet ea. Pro ne vero conceptam, esse solet tacimates at qui. Per no delenit disputationi. Magna minimum consequuntur est ad.
+
+	Accumsan offendit reprehendunt mei ea, per persecuti conclusionemque ex, at eos quot platonem reformidans. At invenire gubergren qui, quem officiis comprehensam ad est. Te per diceret complectitur, pri lorem delicata periculis cu, est quot dictas suavitate ex. Verear laboramus no ius, atqui vitae perfecto sit id. Mel nostrud hendrerit abhorreant ad, vis movet expetenda cu, zril aliquando ius ne.
+
+	Intellegat deseruisse adipiscing ne eos. Ex modo numquam expetendis nam. Ut liber voluptaria cum. Id vide ubique sea. Ex minim legimus nonumes pri.</p>
+
+
+	<br>
+	<br>
+	<br>
+
+	<h4>Grand Opening Our New Gallery</h4>
+	<h6>May 16th, 2015</h6>
+	<h6><strong>San Francisco</strong></h6>
+	<p>Lorem ipsum dolor sit amet, porro dignissim an eum. Errem regione eu has, quodsi labores ad est. Nullam conclusionemque ex vix, eam id legimus legendos. Pro habemus accusam adolescens te. Ad doctus feugiat pericula cum, ubique cetero salutatus per et, eum at vide aeque.
+
+	Pri case assum populo te, mei eu vero mucius viderer, an mea unum pericula. Augue movet alterum mei ad, ne erroribus sententiae omittantur mei, vim diam adolescens eu. In indoctum dissentiunt comprehensam qui, duo sale graeci oporteat ad, soleat molestie an mei. Sint paulo te mea, movet scriptorem id vix, case accusam lucilius ne per. Ad duo alii ornatus argumentum, alia tacimates constituto no mei.
+
+	Et elitr officiis voluptaria nec. Esse graeci latine his no, sea ullum saperet ea. Pro ne vero conceptam, esse solet tacimates at qui. Per no delenit disputationi. Magna minimum consequuntur est ad.
+
+	Accumsan offendit reprehendunt mei ea, per persecuti conclusionemque ex, at eos quot platonem reformidans. At invenire gubergren qui, quem officiis comprehensam ad est. Te per diceret complectitur, pri lorem delicata periculis cu, est quot dictas suavitate ex. Verear laboramus no ius, atqui vitae perfecto sit id. Mel nostrud hendrerit abhorreant ad, vis movet expetenda cu, zril aliquando ius ne.
+
+	Intellegat deseruisse adipiscing ne eos. Ex modo numquam expetendis nam. Ut liber voluptaria cum. Id vide ubique sea. Ex minim legimus nonumes pri.</p>
+
+</div>
