--- a/app/views/pages/sitemap.html.erb
+++ b/app/views/pages/sitemap.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#sitemap</h1>
-<p>Find me in app/views/pages/sitemap.html.erb</p>
+<div class="col-xs-10 col-xs-offset-1">
+	<p>Sitemap</p>
+</div>
