edit html text on index homepage

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,9 +1,9 @@
 <div class="jumbotron">
   <br>
   <br>
-  <h1>Discover artwork from 
-      talented local artists in California.</h1>
-  <h2>Curated and authentic.</h2>
+  <h1>Discover one-of-a-kind artwork from 
+      artists worldwide.</h1>
+  <h3>Curated and authentic.</h3>
 </div>
 
 <div class="center">
@@ -15,7 +15,7 @@
           <div class="caption">
             <h3><%= listing.name %></h3>
             <p><%= number_to_currency(listing.price) %></p>
-            <p><%= "Sold by #{listing.user.name}" %></p>
+            <p><%= "Offered by #{listing.user.name}" %></p>
             
           </div>
         </div>
